# ufmg

./: README.md
arch/: notas.ods  notas.xls
codeblocks/: default.conf
ir-teacher-assistant/search-engine-latin/: README  consultas-tp3.txt
paa/: notes.txt
paa/grafos/: notes.txt
paa/tp-final/: Makefile.ini  all-papers  bibliografia.bib  plano-curso.d  proposta.tex  proposta2.tex
paa/tp-final/wire/WIRE-0.22/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  config.h  config.h.in  config.status  configure  configure.in  sample-carlos.conf
paa/tp-final/wire/WIRE-0.22/bot/: Makefile  Makefile.am  Makefile.in  activepool.cc  activepool.h  gatherer.cc  gatherer.h  harvester.cc  harvester.h  manager.cc  manager.h  page.cc  page.h  parser.cc  parser.h  pollvec.cc  pollvec.h  reset.cc  reset.h  seeder.cc  seeder.h  server.cc  server.h  waitq.cc  waitq.h  wire-bot-gatherer  wire-bot-harvester  wire-bot-manager  wire-bot-reset  wire-bot-run  wire-bot-seeder
paa/tp-final/wire/WIRE-0.22/bot/.deps/: activepool.Po  gatherer.Po  harvester.Po  manager.Po  page.Po  parser.Po  pollvec.Po  reset.Po  seeder.Po  server.Po  waitq.Po
paa/tp-final/wire/WIRE-0.22/data/: Makefile  Makefile.am  Makefile.in
paa/tp-final/wire/WIRE-0.22/data/lang/: Makefile  Makefile.am  Makefile.in  README.txt  catala  danish  english  finnish  french  german  greek  italian  norwegian  portugues  spanish  swedish  turkish
paa/tp-final/wire/WIRE-0.22/data/tld/: Makefile  Makefile.am  Makefile.in  README.txt  sizes.csv
paa/tp-final/wire/WIRE-0.22/doc/: Makefile  Makefile.am  Makefile.in  index.html  index.xml  sample.conf
paa/tp-final/wire/WIRE-0.22/doc/icn/: Makefile  Makefile.am  Makefile.in
paa/tp-final/wire/WIRE-0.22/info/: Makefile  Makefile.am  Makefile.in  analysis.cc  analysis.h  extract.cc  extract.h  import.cc  import.h  lang.cc  lang.h  shell.cc  shell.h  wire-info-analysis  wire-info-extract  wire-info-import  wire-info-shell
paa/tp-final/wire/WIRE-0.22/info/.deps/: analysis.Po  extract.Po  import.Po  lang.Po  shell.Po
paa/tp-final/wire/WIRE-0.22/lib/: Makefile  Makefile.am  Makefile.in  cgic.c  cgic.h  cleanup.cc  cleanup.h  connection.c  connection.h  const.h  die.h  harvestidx.cc  harvestidx.h  http_charset.cc  http_charset.h  http_codes.h  int_stack.cc  int_stack.h  linkidx.cc  linkidx.h  md5.cc  md5.h  metaidx.cc  metaidx.h  metaidx_analysis.cc  metaidx_analysis.h  perfect_hash.cc  perfect_hash.h  sitelink.cc  sitelink.h  storage.cc  storage.h  string_list.cc  string_list.h  urlidx.cc  urlidx.h  utils.cc  utils.h  xmlconf-main.h  xmlconf-vars.h  (+2 more)
paa/tp-final/wire/WIRE-0.22/lib/.deps/: cgic.Po  cleanup.Po  connection.Po  harvestidx.Po  http_charset.Po  int_stack.Po  linkidx.Po  md5.Po  metaidx.Po  metaidx_analysis.Po  perfect_hash.Po  sitelink.Po  storage.Po  string_list.Po  urlidx.Po  utils.Po  xmlconf.Po
paa/tp-final/wire/WIRE-0.22/report/: Makefile  Makefile.am  Makefile.in  wire-report-doc  wire-report-extension  wire-report-harvest  wire-report-lang  wire-report-site  wire-report-sitelink  wire-report.lib
paa/tp-final/wire/WIRE-0.22/search/: Makefile  Makefile.am  Makefile.in  feeder.cc  feeder.h  indexer.cc  indexer.h  split.cc  split.h  wire-search-feeder  wire-search-indexer  wire-search-text-split
paa/tp-final/wire/WIRE-0.22/search/.deps/: feeder.Po  indexer.Po  split.Po
paa/tp-final/wire/WIRE-0.22/test/: Makefile  Makefile.am  Makefile.in  test_multipatt.cc  test_parser.cc  test_parser.h  test_perfect_hash.cc  test_url.cc  test_urlidx.cc  testadns.cc  wire-test-adns  wire-test-multipatt  wire-test-parser  wire-test-perfhash  wire-test-url  wire-test-urlidx
paa/tp-final/wire/WIRE-0.22/test/.deps/: parser.Po  test_multipatt.Po  test_parser.Po  test_perfect_hash.Po  test_url.Po  test_urlidx.Po  testadns.Po
paa/tp-final/wire/WIRE-0.22/universalchardet/: CharDistribution.h  JpCntx.cpp  JpCntx.h  Makefile  Makefile.in  nsBig5Prober.h  nsCharSetProber.h  nsCodingStateMachine.h  nsEUCJPProber.h  nsEUCKRProber.h  nsEUCTWProber.h  nsEscCharsetProber.h  nsGB2312Prober.h  nsLatin1Prober.cpp  nsLatin1Prober.h  nsMBCSGroupProber.cpp  nsMBCSGroupProber.h  nsPRMem.h  nsPRTypes.h  nsPkgInt.h  nsSBCSGroupProber.cpp  nsSBCSGroupProber.h  nsSBCharSetProber.cpp  nsSBCharSetProber.h  nsSJISProber.h  nsUTF8Prober.h  nsUniversalDetector.cpp  nsUniversalDetector.h
paa/tp-final/wire/WIRE-0.22/universalchardet/.deps/: CharDistribution.Po  JpCntx.Po  LangBulgarianModel.Po  LangCyrillicModel.Po  LangGreekModel.Po  LangHungarianModel.Po  LangThaiModel.Po  nsBig5Prober.Po  nsEUCJPProber.Po  nsEUCKRProber.Po  nsEUCTWProber.Po  nsEscCharsetProber.Po  nsEscSM.Po  nsGB2312Prober.Po  nsLatin1Prober.Po  nsMBCSGroupProber.Po  nsMBCSSM.Po  nsSBCSGroupProber.Po  nsSBCharSetProber.Po  nsSJISProber.Po  nsUTF8Prober.Po  nsUniversalDetector.Po
paa/tp-final/wire/WIRE-0.22/wirudiko/: Makefile  Makefile.am  Makefile.in  englishstemmer.cc  englishstemmer.h  irudiko.h  irudikoenglishreader.cc  irudikoenglishreader.h  irudikogenericreader.cc  irudikogenericreader.h  irudikoitalianreader.cc  irudikoitalianreader.h  irudikosimplereader.cc  irudikosimplereader.h  irudikosketchgenerator.cc  irudikosketchgenerator.h  italianstemmer.cc  italianstemmer.h
paa/tp-final/wire/WIRE-0.22/wirudiko/.deps/: englishstemmer.Po  irudikoenglishreader.Po  irudikogenericreader.Po  irudikoitalianreader.Po  irudikosimplereader.Po  irudikosketchgenerator.Po  italianstemmer.Po
paa/tp1/: testes  testes.cpp
paa/tp2/: compile.sh  tp2.layout  web-stanford-10.txt  web-stanford-100.txt  web-stanford-10000.txt
paa/tp3/: alberto-ueda-tp3  alberto-ueda-tp3-BACKUP  alberto-ueda-tp3-TODOS.cpp  all_input_n_11.txt  all_input_n_4.txt  compile_ga.sh  dados-corretude-guloso.txt  data-analysis.ods.BKP  execute_ga.sh  experiment_paulo_input.txt  experiment_paulo_output.txt  output-dp.txt  output-ga.txt  string_100_michel.txt  strings-ramon.txt  strings-tp-description.txt  tp3.cbp  tp3.depend  tp3.layout
recsys/project/: .gitignore  Makefile  main.cpp  main.cpp.orig  rec.orig
recsys/tp1/: IO.cpp  (+11 more)
(+254 files in other folders)
